跨域 收付款信息

--- a/DID/DID/appsettings.Development.json
+++ b/DID/DID/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=DID;User ID=sa;Password=sa",
+  "Authentication": {
+    "SecretKey": "nadjhfgkadshgoihfkajhkjdhsfaidkuahfhdksjaghidshyaukfhdjks",
+    "Issuer": "www.adsfsadfasdf",
+    "Audience": "www.adsfsadfasdf"
+  },
+  "Cors": {
+    //跨域策略名称
+    "PolicyName": "CorsIpAccess",
+    //是否任意允许跨域
+    "EnableAllIPs": true,
+    "IPs": "http://127.0.0.1:8080,http://localhost:8001"
   }
 }
