--- a/DID/DID/appsettings.json
+++ b/DID/DID/appsettings.json
@@ -11,5 +11,12 @@
     "SecretKey": "nadjhfgkadshgoihfkajhkjdhsfaidkuahfhdksjaghidshyaukfhdjks",
     "Issuer": "www.adsfsadfasdf",
     "Audience": "www.adsfsadfasdf"
+  },
+  "Cors": {
+    //跨域策略名称
+    "PolicyName": "CorsIpAccess",
+    //是否任意允许跨域
+    "EnableAllIPs": true,
+    "IPs": "http://127.0.0.1:8001,http://localhost:8001"
   }
 }
