Dao钱包认证 收益详情

--- a/DID/Dao.Controller/Dao.Controllers.csproj
+++ b/DID/Dao.Controller/Dao.Controllers.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dao.Common\Dao.Common.csproj" />
     <ProjectReference Include="..\Dao.Models\Dao.Models.csproj" />
     <ProjectReference Include="..\Dao.Services\Dao.Services.csproj" />
     <ProjectReference Include="..\DID.Models\DID.Models.csproj" />
