--- a/DID/Dao.Models/Dao.Models.csproj
+++ b/DID/Dao.Models/Dao.Models.csproj
@@ -7,4 +7,8 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dao.Entity\Dao.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
