--- a/DID/Dao.Services/Dao.Services.csproj
+++ b/DID/Dao.Services/Dao.Services.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dao.Common\Dao.Common.csproj" />
     <ProjectReference Include="..\Dao.Entity\Dao.Entity.csproj" />
     <ProjectReference Include="..\Dao.Models\Dao.Models.csproj" />
     <ProjectReference Include="..\DID.Common\DID.Common.csproj" />
