--- a/DID/Dao.Controller/Dao.Controllers.csproj
+++ b/DID/Dao.Controller/Dao.Controllers.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Dao.Models\Dao.Models.csproj" />
     <ProjectReference Include="..\Dao.Services\Dao.Services.csproj" />
     <ProjectReference Include="..\DID.Models\DID.Models.csproj" />
+    <ProjectReference Include="..\DID.Services\DID.Services.csproj" />
   </ItemGroup>
 
 </Project>
