--- a/DID/Dao.Entity/Dao.Entity.csproj
+++ b/DID/Dao.Entity/Dao.Entity.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="NPoco" Version="5.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DID.Entity\DID.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
