--- a/DID后端/apevolo-web/.env.production
+++ b/DID后端/apevolo-web/.env.production
@@ -1,6 +1,6 @@
 ENV = 'production'
 #nginx代理前后端直接使用"/"
-#VUE_APP_BASE_API  = 'https://api.apevolo.com'
+#VUE_APP_BASE_API  = 'http://192.168.2.110:8002'
 VUE_APP_BASE_API  = '/'
 # 如果接口是 http 形式， wss 需要改为 ws
 #VUE_APP_WS_API = 'wss://api.apevolo.com'
