--- a/DID/DID.Common/DID.Common.csproj
+++ b/DID/DID.Common/DID.Common.csproj
@@ -16,6 +16,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NPoco" Version="5.3.2" />
     <PackageReference Include="NPoco.SqlServer" Version="5.3.2" />
+    <PackageReference Include="OpenCvSharp4.Extensions" Version="4.6.0.20220608" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.6.0.20220608" />
+    <PackageReference Include="OpenCvSharp4.Windows" Version="4.6.0.20220608" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
