--- a/DID/DID/appsettings.json
+++ b/DID/DID/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=DID;User ID=sa;Password=sa",
+  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=test;User ID=sa;Password=sa",
   "Authentication": {
     "SecretKey": "nadjhfgkadshgoihfkajhkjdhsfaidkuahfhdksjaghidshyaukfhdjks",
     "Issuer": "www.adsfsadfasdf",
