--- a/DID后端/apevolo-web/package.json
+++ b/DID后端/apevolo-web/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/xianhc/apevolo-api.git" 
+    "url": "https://github.com/xianhc/apevolo-api.git"
   },
   "bugs": {
     "url": "https://github.com/xianhc/apevolo-api/issues"
@@ -39,6 +39,7 @@
     "codemirror": "^5.49.2",
     "connect": "3.6.6",
     "core-js": "^2.6.12",
+    "dayjs": "^1.11.5",
     "echarts": "^4.2.1",
     "echarts-gl": "^1.1.1",
     "echarts-wordcloud": "^1.1.3",
@@ -92,7 +93,6 @@
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.1",
-    "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "plop": "2.3.0",
     "runjs": "^4.3.2",
