--- a/DID/DID/appsettings.Development.json
+++ b/DID/DID/appsettings.Development.json
@@ -18,5 +18,10 @@
     //是否任意允许跨域
     "EnableAllIPs": true,
     "IPs": "http://127.0.0.1:8080,http://localhost:8001"
+  },
+  "Middleware": {
+    "IpLimit": {
+      "Enabled": true
+    }
   }
 }
