--- a/DID/DID/appsettings.Development.json
+++ b/DID/DID/appsettings.Development.json
@@ -6,18 +6,18 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=test;User ID=sa;Password=sa",
+  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=didtest;User ID=sa;Password=sa",
   "Authentication": {
     "SecretKey": "nadjhfgkadshgoihfkajhkjdhsfaidkuahfhdksjaghidshyaukfhdjks",
-    "Issuer": "www.adsfsadfasdf",
-    "Audience": "www.adsfsadfasdf"
+    "Issuer": "eotc",
+    "Audience": "eotc"
   },
   "Cors": {
     //跨域策略名称
     "PolicyName": "CorsIpAccess",
     //是否任意允许跨域
     "EnableAllIPs": true,
-    "IPs": "http://127.0.0.1:8080,http://localhost:8001"
+    "IPs": "http://127.0.0.1:8080,http://localhost:8080/"
   },
   "Middleware": {
     "IpLimit": {
