--- a/DID/DID/appsettings.json
+++ b/DID/DID/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=test;User ID=sa;Password=sa",
+  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=didtest1;User ID=sa;Password=sa",
   "Authentication": {
     "SecretKey": "nadjhfgkadshgoihfkajhkjdhsfaidkuahfhdksjaghidshyaukfhdjks",
-    "Issuer": "www.adsfsadfasdf",
-    "Audience": "www.adsfsadfasdf"
+    "Issuer": "eotc",
+    "Audience": "eotc"
   },
   "Cors": {
     //跨域策略名称
