--- a/DID/App.Services/App.Services.csproj
+++ b/DID/App.Services/App.Services.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+    <PackageReference Include="Snowflake.Core" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
