--- a/DID/DID/appsettings.Development.json
+++ b/DID/DID/appsettings.Development.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=didtest;User ID=sa;Password=sa",
+  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=didtest1;User ID=sa;Password=sa",
   "Authentication": {
-    "SecretKey": "nadjhfgkadshgoihfkajhkjdhsfaidkuahfhdksjaghidshyaukfhdjks",
+    "SecretKey": "gdaaJTeaxxXOeRCicJmdZYNYqLsRIzIkJiDBrzzMIvpSmcoEHlRhDjs",
     "Issuer": "eotc",
     "Audience": "eotc"
   },
