--- a/DID后端/apevolo-web/package.json
+++ b/DID后端/apevolo-web/package.json
@@ -63,6 +63,7 @@
     "vue-echarts": "^5.0.0-beta.0",
     "vue-highlightjs": "^1.3.3",
     "vue-image-crop-upload": "^2.5.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
@@ -93,6 +94,7 @@
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.1",
+    "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "plop": "2.3.0",
     "runjs": "^4.3.2",
