--- a/DID后端/apevolo-api/ApeVolo.Api/appsettings.json
+++ b/DID后端/apevolo-api/ApeVolo.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AllowedHosts": "*",
   "Audience": {
-    "Audience": "wr",
-    "Issuer": "ApeVolo",
-    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs"
+    "Audience": "eotc",
+    "Issuer": "eotc",
+    "Secret": "gdaaJTeaxxXOeRCicJmdZYNYqLsRIzIkJiDBrzzMIvpSmcoEHlRhDjs"
   },
   //是否初始种子数据
   "InitDbTable": true,
