--- a/DID/DID/Properties/launchSettings.json
+++ b/DID/DID/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7141;http://localhost:5141",
+      "applicationUrl": "https://localhost:7141;https://0.0.0.0:7141;http://localhost:5141;http://0.0.0.0:5141",
       "dotnetRunMessages": true
     },
     "IIS Express": {
