--- a/DID/DID/appsettings.json
+++ b/DID/DID/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=didtest1;User ID=sa;Password=sa",
+  "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=test1113;User ID=sa;Password=sa",
+  //"ConnectionString": "Data Source=20.78.74.136;Initial Catalog=eotc_did;User ID=did;Password=ai9W8@294ue8",
   "Authentication": {
     "SecretKey": "gdaaJTeaxxXOeRCicJmdZYNYqLsRIzIkJiDBrzzMIvpSmcoEHlRhDjs",
     "Issuer": "eotc",
@@ -23,5 +24,7 @@
     "IpLimit": {
       "Enabled": true
     }
-  }
+  },
+  "AdminUserId": "2179943a-b996-420b-8096-fd20ea2087f2;0e2b21db-0b17-4d45-b62e-27f4cbbb7a7a;e9a89cbf-41f3-48d1-afa8-29bbe6e674e1",
+  "MailSuffix": ".cc;.me;.top;.la"
 }
