--- a/DID/DID/appsettings.Development.json
+++ b/DID/DID/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": "Data Source=127.0.0.1;Initial Catalog=didtest1;User ID=sa;Password=sa",
+  //"ConnectionString": "Data Source=20.78.74.136;Initial Catalog=eotc_did;User ID=did;Password=ai9W8@294ue8",
   "Authentication": {
     "SecretKey": "gdaaJTeaxxXOeRCicJmdZYNYqLsRIzIkJiDBrzzMIvpSmcoEHlRhDjs",
     "Issuer": "eotc",
