--- a/DID/DID/appsettings.json
+++ b/DID/DID/appsettings.json
@@ -26,5 +26,6 @@
     }
   },
   "AdminUserId": "2179943a-b996-420b-8096-fd20ea2087f2;0e2b21db-0b17-4d45-b62e-27f4cbbb7a7a;e9a89cbf-41f3-48d1-afa8-29bbe6e674e1",
-  "MailSuffix": ".cc;.me;.top;.la"
+  "MailSuffix": ".cc;.me;.top;.la",
+  "RiskAdminUserId": "2179943a-b996-420b-8096-fd20ea2087f2;0e2b21db-0b17-4d45-b62e-27f4cbbb7a7a;e9a89cbf-41f3-48d1-afa8-29bbe6e674e1"
 }
