--- a/DID/Dao.Models/Dao.Models.csproj
+++ b/DID/Dao.Models/Dao.Models.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Dao.Entity\Dao.Entity.csproj" />
     <ProjectReference Include="..\DID.Entity\DID.Entity.csproj" />
+    <ProjectReference Include="..\DID.Models\DID.Models.csproj" />
   </ItemGroup>
 
 </Project>
